--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^3.7.0",
     "date-fns": "^2.28.0",
+    "framer-motion": "^6.2.8",
     "html-react-parser": "^1.4.6",
     "millify": "^4.0.0",
     "react": "^17.0.2",
@@ -21,6 +22,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-select": "^5.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
